.omo/evidence/controller-webhook-split-deployment/split/live-split-20260728002000/admission-validating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T16:03:59Z"
  generation: 1
  name: echo-operator.echo-smoke-split-live-split-20260728002000.echo.example.com
  resourceVersion: "2237476"
  uid: a5d4efb5-23ac-4531-8839-d02f5642a956
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVVkVmbXZOWjNPNk56dFR0M2N2VEZ2K3cyTEVnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dERVdNQlFHQTFVRUF3d05aV05vYnkxemJXOXJaUzFqWVRBZUZ3MHlOakEzTWpjeE5qQXpOVFZhRncweQpOakEzTWpneE5qQXpOVFZhTUJneEZqQVVCZ05WQkFNTURXVmphRzh0YzIxdmEyVXRZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURFWmQvanJMWGpRMlowOGVJMTd3WVFsSm1rajJNTk5FTjAKYjVEMzN6Yi9VLzBMWjlEUnNndWhmT01vMjZldFBYRmY3OWRFK2FQbEFnYnNsME9KdkZ3UmxHNG5Wak52TVQ2WQpNZ2hpa0pmZ0dabW [...]
    service:
      name: echo-smoke-split-live-split-20260728002000-echo-operator
      namespace: echo-smoke-split-live-split-20260728002000
      path: /validate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-split-live-split-20260728002000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
